--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_doan
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
-
+#logging.level.org.hibernate=DEBUG
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
