--- a/FE/package.json
+++ b/FE/package.json
@@ -27,6 +27,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "universal-cookie": "^7.1.4",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
