--- a/FE/package.json
+++ b/FE/package.json
@@ -25,11 +25,13 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-use-cart": "^1.13.0",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "universal-cookie": "^7.1.4",
     "uuid": "^10.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
